Adding Youtube search

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
-<p>
-  Bienvenue sur ce projet MEAN où le A est Angular "2" :)
-</p>
+<div class="col-md-12">
+  <h2>YouTube Search & Play</h2>
+</div>
 
-<p>
-  <a routerLink="/favorites">favoris YouTube récupérés d'une base noSQL</a>
-</p>
+<div class="col-sm-12">
+  <youtube-search></youtube-search>
+</div>
