switching to proper video, popup, styling

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
-<div class="col-md-12">
+<!--<div class="col-md-12">
   <h2>YouTube Search & Play</h2>
-</div>
+</div>-->
 
 <div class="col-sm-12">
   <youtube-search></youtube-search>
