adding navbar, completing fav deleting and fav listing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,22 @@
-<h1>
-  {{title}}
-</h1>
-<router-outlet></router-outlet>
+<nav class="navbar navbar-inverse">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">YT Search & Play</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li><a [routerLink]="['/']">Accueil</a></li>
+            <li><a [routerLink]="['/favorites']">Favoris</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+</nav>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
