--- a/src/app/favorite-list/favorite-list.component.css
+++ b/src/app/favorite-list/favorite-list.component.css
@@ -2,3 +2,14 @@
     float: left;
     margin-right: 5px;
 }
+
+
+.favframe {
+    border: 1px solid #d95347;
+    /* margin: 2px; */
+    padding: 5px;
+    margin-bottom: 8px;
+    margin-right: 21px;
+    min-height: 262px;
+    float: left;
+}
